src/test/ui/stability-attribute/stability-attribute-sanity.stderr
error[E0541]: unknown meta item 'reason'
  --> $DIR/stability-attribute-sanity.rs:8:46
   |
LL |     #[stable(feature = "a", since = "1.0.0", reason)]
   |                                              ^^^^^^ expected one of `since`, `note`

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:11:29
   |
LL |     #[stable(feature = "a", since)]
   |                             ^^^^^

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:14:14
   |
LL |     #[stable(feature, since = "1.0.0")]
   |              ^^^^^^^

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:17:29
   |
LL |     #[stable(feature = "a", since(b))]
   |                             ^^^^^^^^

error[E0539]: incorrect meta item
  --> $DIR/stability-attribute-sanity.rs:20:14
   |
LL |     #[stable(feature(b), since = "1.0.0")]
   |              ^^^^^^^^^^

error[E0546]: missing 'feature'
  --> $DIR/stability-attribute-sanity.rs:25:5
   |
LL |     #[unstable(issue = "none")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/stability-attribute-sanity.rs:28:5
   |
LL |     #[unstable(feature = "b")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0546]: missing 'feature'
  --> $DIR/stability-attribute-sanity.rs:31:5
   |
LL |     #[stable(since = "1.0.0")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: invalid 'since'
  --> $DIR/stability-attribute-sanity.rs:36:5
   |
LL |     #[stable(feature = "a")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: invalid 'since'
  --> $DIR/stability-attribute-sanity.rs:40:5
   |
LL |     #[rustc_deprecated(reason = "a")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0543]: missing 'reason'
  --> $DIR/stability-attribute-sanity.rs:44:5
   |
LL |     #[rustc_deprecated(since = "1.0.0")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:49:1
   |
LL | #[stable(feature = "a", since = "1.0.0")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:53:1
   |
LL | #[unstable(feature = "b", issue = "none")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:57:1
   |
LL | #[stable(feature = "a", since = "1.0.0")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0550]: multiple deprecated attributes
  --> $DIR/stability-attribute-sanity.rs:62:1
   |
LL | #[rustc_deprecated(since = "1.0.0", reason = "text")]
   | ----------------------------------------------------- first deprecation attribute
LL | #[rustc_deprecated(since = "1.0.0", reason = "text")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ repeated deprecation attribute

error[E0544]: multiple stability levels
  --> $DIR/stability-attribute-sanity.rs:64:1
   |
LL | #[rustc_const_unstable(feature = "d", issue = "none")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: invalid 'since'
  --> $DIR/stability-attribute-sanity.rs:67:1
   |
LL | #[stable(feature = "a", since = "invalid")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0542]: invalid 'since'
  --> $DIR/stability-attribute-sanity.rs:71:1
   |
LL | #[rustc_deprecated(since = "invalid", reason = "text")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0549]: rustc_deprecated attribute must be paired with either stable or unstable attribute
  --> $DIR/stability-attribute-sanity.rs:74:1
   |
LL | #[rustc_deprecated(since = "1.0.0", reason = "text")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: An API can't be stabilized after it is deprecated
  --> $DIR/stability-attribute-sanity.rs:80:1
   |
LL | fn deprecated_before_stabilized() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 20 previous errors

Some errors have detailed explanations: E0539, E0541, E0542, E0543, E0546, E0547, E0549, E0550.
For more information about an error, try `rustc --explain E0539`.
